k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debasish-portfolio
  labels:
    app: debasish-portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: debasish-portfolio
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: debasish-portfolio
    spec:
      containers:
      - name: debasish-portfolio
        image: debasishlenka6/debasish-portfolio:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
