k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: debasish-portfolio-service
spec:
  type: NodePort
  selector:
    app: debasish-portfolio
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
